--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "lint": "standard",
     "test": "node test.js"
   },
   "keywords": [],
   "author": "David Mark Clements (@davidmarkclem)",
   "license": "MIT",
-  "description": "Small library for generated prefixed labels"
+  "description": "Small library for generated prefixed labels",
+  "devDependencies": {
+    "standard": "^16.0.4"
+  }
 }
